--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minimalist Animation</title>
+    <meta
+      data-n-head="ssr"
+      data-hid="description"
+      name="description"
+      content="Uma aplicacao simples para animar troca de cor de textos."
+    />
+    <meta name="keywords" content="HTML, CSS" />
+    <meta
+      name="author"
+      content="Diego Santos  < diegosantos-dev: https://github.com/diegosantos-dev "
+    />
     <link rel="stylesheet" href="styles/styles.css" />
     <!-- Load 'Inter' from Google Fonts CDN -->
     <link
